@@ -328,14 +328,21 @@ class ZBase {
 	protected function initLocales() {
 		init_mbstrings();
 
+		$defaultLocales = array(
+			'C', 'POSIX', 'en', 'en_US', 'en_US.UTF-8', 'English_United States.1252', 'en_GB', 'en_GB.UTF-8'
+		);
+
 		if (function_exists('bindtextdomain')) {
 			// initializing gettext translations depending on language selected by user
 			$locales = zbx_locale_variants(CWebUser::$data['lang']);
 			$locale_found = false;
 			foreach ($locales as $locale) {
+				// since LC_MESSAGES may be unavailable on some systems, try to set all of the locales
+				// and then revert some of them back
 				putenv('LC_ALL='.$locale);
 				putenv('LANG='.$locale);
 				putenv('LANGUAGE='.$locale);
+				setlocale(LC_TIME, $locale);
 
 				if (setlocale(LC_ALL, $locale)) {
 					$locale_found = true;
@@ -343,6 +350,12 @@ class ZBase {
 					break;
 				}
 			}
+
+			// reset the LC_CTYPE locale so that case transformation functions would work correctly
+			// it is also required for PHP to work with the Turkish locale (https://bugs.php.net/bug.php?id=18556)
+			// WARNING: this must be done before executing any other code, otherwise code execution could fail!
+			// this will be unnecessary in PHP 5.5
+			setlocale(LC_CTYPE, $defaultLocales);
 
 			if (!$locale_found && CWebUser::$data['lang'] != 'en_GB' && CWebUser::$data['lang'] != 'en_gb') {
 				error('Locale for language "'.CWebUser::$data['lang'].'" is not found on the web server. Tried to set: '.implode(', ', $locales).'. Unable to translate Zabbix interface.');
@@ -352,11 +365,11 @@ class ZBase {
 			textdomain('frontend');
 		}
 
+		// reset the LC_NUMERIC locale so that PHP would always use a point instead of a comma for decimal numbers
+		setlocale(LC_NUMERIC, $defaultLocales);
+
 		// should be after locale initialization
 		require_once $this->getRootDir().'/include/translateDefines.inc.php';
-
-		// numeric Locale to default
-		setlocale(LC_NUMERIC, array('C', 'POSIX', 'en', 'en_US', 'en_US.UTF-8', 'English_United States.1252', 'en_GB', 'en_GB.UTF-8'));
 	}
 
 	/**
