@@ -17,6 +17,7 @@ New features:
 A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-3855] fixed bug that prevented the frontend from working with the Turkish locale (Pavels)
 A......... [ZBX-7483] fixed user group delete validation (Eduard)
 ..F....... [ZBX-6296] optimized macro resolving in latest data (Eduard)
 ..F....... [ZBX-6296] rewrote user macros resolving (Eduard, Sasha)
